<resources>
    <string name="app_name">SecuriCamApplication</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="welcome_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Don\'t have an Account ? Register</string>
    <string name="logo">Logo</string>
    <string name="invalid_email">Please enter a valid email.</string>
    <string name="login_sucess">Login Successfully</string>
    <string name="min_password">Password must be 6 characters or more.</string>
    <string name="name">Username</string>
    <string name="have_acc">Have an account? Log in</string>
    <string name="min_name">Name must be 2 characters or more</string>
    <string name="camera">Camera</string>
    <string name="viewer">Viewer</string>
    <string name="profile">Profile</string>
    <string name="add">Add Story</string>
    <string name="language">Change Language</string>
    <string name="logout">Log out</string>
</resources>